--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>LoganFinney UI/UX design About Skills Tools Resume</title>
+  <title>About Logan Finney</title>
   <link href="img/favicon.ico" rel="shortcut icon">
 </head>
 
