new css changes

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>LoganFinney UI/UX design portfolio</title>
   <link href="img/favicon.ico" rel="shortcut icon">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
@@ -35,11 +38,11 @@
         </g>
       </svg>
       <nav>
-        <ul>
-          <li><a href="index.html">Work</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
+
+        <a href="index.html" class="nav">Work</a>
+        <a href="about.html" class="nav">About</a>
+        <a href="#contact" class="nav">Contact</a>
+
       </nav>
     </div>
   </header>
@@ -47,7 +50,7 @@
     <div>
       <div>
         <h1>Hello, my name is Logan Finney</h1>
-        <span>I'm a UI/UX designer<br>based in beautiful Bend, Oregon</br></span>
+        <h2>I'm a UI/UX designer<br>based in beautiful Bend, Oregon</br></h2>
         <p>I am passionate about creating beautiful, user-centric design solutions</p>
       </div>
     </div>
@@ -63,7 +66,7 @@
               </picture>
               <h3>NEORETRO</h3>
               <p>A responsive e-commerce site concept offering quality motorcycle goods worldwide.</p>
-              <a href="neoretro.html">View Project</a>
+              <a href="neoretro.html" class="button">View Project</a>
             </div>
           </div>
         </div>
@@ -77,26 +80,26 @@
         I’d love to chat about inclusive design and the value I can add to your team. <br>Skype me at <a href="skype:Logan Finney">Logan Finney</a></br>
       </p>
       <div>
-        <a href="mailto:loganmfinney@gmail.com">Email me</a>
+        <a href="mailto:loganmfinney@gmail.com" class="button contact">Send an Email</a>
       </div>
       <div>
         <ul>
-          <li><a href="http://linkedin.com/in/logan-finney" target="_blank">
-              <svg data-name="Layer 1" id="Layer_1" viewBox="0 0 128 128" xmlns="http://www.w3.org/2000/svg">
-                <defs>
-                  <style>
-                    .cls-1 {
-                      fill: #062b31;
-                    }
-                  </style>
-                </defs>
-                <title />
-                <path class="cls-1"
-                  d="M106.09,20.5a1.41,1.41,0,0,1,1.41,1.41v84.19a1.41,1.41,0,0,1-1.41,1.41H21.91a1.41,1.41,0,0,1-1.41-1.41V21.91a1.41,1.41,0,0,1,1.41-1.41h84.19m0-6.5H21.91A7.91,7.91,0,0,0,14,21.91v84.19A7.91,7.91,0,0,0,21.91,114h84.19a7.91,7.91,0,0,0,7.91-7.91V21.91A7.91,7.91,0,0,0,106.09,14Z" />
-                <rect class="cls-1" height="41.73" width="11.73" x="37.27" y="50.4" />
-                <path class="cls-1" d="M77.23,50.4C67.18,50.4,67,56.21,67,56.61V50.4H55V92.13H67V68.31c0-1.86.55-5.86,6.23-5.86s5.63,5.73,5.63,5.73v24H90.73v-26C90.73,53.85,84,50.4,77.23,50.4Z" />
-                <circle class="cls-1" cx="43.13" cy="41.73" r="5.86" />
-              </svg>
+          <li><a href="http://linkedin.com/in/logan-finney" target="_blank"></a>
+            <svg data-name="Layer 1" id="Layer_1" viewBox="0 0 128 128" xmlns="http://www.w3.org/2000/svg">
+              <defs>
+                <style>
+                  .cls-1 {
+                    fill: #062b31;
+                  }
+                </style>
+              </defs>
+              <title />
+              <path class="cls-1"
+                d="M106.09,20.5a1.41,1.41,0,0,1,1.41,1.41v84.19a1.41,1.41,0,0,1-1.41,1.41H21.91a1.41,1.41,0,0,1-1.41-1.41V21.91a1.41,1.41,0,0,1,1.41-1.41h84.19m0-6.5H21.91A7.91,7.91,0,0,0,14,21.91v84.19A7.91,7.91,0,0,0,21.91,114h84.19a7.91,7.91,0,0,0,7.91-7.91V21.91A7.91,7.91,0,0,0,106.09,14Z" />
+              <rect class="cls-1" height="41.73" width="11.73" x="37.27" y="50.4" />
+              <path class="cls-1" d="M77.23,50.4C67.18,50.4,67,56.21,67,56.61V50.4H55V92.13H67V68.31c0-1.86.55-5.86,6.23-5.86s5.63,5.73,5.63,5.73v24H90.73v-26C90.73,53.85,84,50.4,77.23,50.4Z" />
+              <circle class="cls-1" cx="43.13" cy="41.73" r="5.86" />
+            </svg>
           </li>
         </ul>
         </a>
