--- a/neoretro.html
+++ b/neoretro.html
@@ -1,96 +1,102 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>neoretro motorbike equipment project page</title>
-    <link href="img/favicon.ico" rel="shortcut icon">
-  </head>
-  <body>
-    <header>
-      <div>
-        <svg width="63px" height="63px" viewBox="0 0 63 63" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-          <title>Group 3 Copy</title>
-          <g id="Symbols" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-            <g id="Mobile-Copy-2" transform="translate(-35.000000, -208.000000)">
-              <g id="Group-3-Copy" transform="translate(35.000000, 208.000000)">
-                <g id="Group">
-                  <circle id="Oval-Copy-2" fill="#FF5400" cx="38" cy="31.32" r="8.4"></circle>
-                  <path
-                    d="M16,6.84692827 L16,60.8 C16,61.6836556 16.7163444,62.4 17.6,62.4 L60.8,62.4 C61.6836556,62.4 62.4,61.6836556 62.4,60.8 L62.4,52.3105577 C62.4,51.4269021 61.6836556,50.7105577 60.8,50.7105577 L30.5575464,50.7105577 C29.6738908,50.7105577 28.9575464,49.9942133 28.9575464,49.1105577 L28.9575464,2.47106248 C28.9575464,1.58740688 28.241202,0.871062475 27.3575464,0.871062475 C27.1318717,0.871062475 26.9087497,0.918802638 26.7028336,1.01114772 L16.9452871,5.38701352 C16.3701172,5.64495402 16,6.21656824 16,6.84692827 Z"
-                    id="Path-2-Copy-16" fill="#363430" fill-rule="nonzero" transform="translate(39.200000, 31.200000) scale(-1, -1) translate(-39.200000, -31.200000) "></path>
-                  <path
-                    d="M0,6.84692827 L0,60.8 C-3.81600257e-15,61.6836556 0.7163444,62.4 1.6,62.4 L44.8,62.4 C45.6836556,62.4 46.4,61.6836556 46.4,60.8 L46.4,52.3105577 C46.4,51.4269021 45.6836556,50.7105577 44.8,50.7105577 L14.5575464,50.7105577 C13.6738908,50.7105577 12.9575464,49.9942133 12.9575464,49.1105577 L12.9575464,2.47106248 C12.9575464,1.58740688 12.241202,0.871062475 11.3575464,0.871062475 C11.1318717,0.871062475 10.9087497,0.918802638 10.7028336,1.01114772 L0.945287149,5.38701352 C0.370117211,5.64495402 -8.01222134e-16,6.21656824 0,6.84692827 Z"
-                    id="Path-2-Copy-17" fill="#363430" fill-rule="nonzero"></path>
-                </g>
-                <g id="Group-2" transform="translate(28.000000, 19.000000)">
-                  <circle id="Oval" fill="#FF5400" cx="10" cy="12" r="9"></circle>
-                  <path
-                    d="M15.1944609,16.7778824 C13.9959455,17.2638181 15.6956553,18.8485217 16.5499145,18.5049012 C17.8098686,17.9980923 23.151915,7.68578086 12.1114078,4.49064652 C6.48258837,2.86166029 2.50557363,9.76328731 2.9892247,11.0835694 C3.26380146,11.8331155 5.22263426,3.36846911 12.2022505,6.63247299 C19.1818668,9.89647686 16.3929762,16.2919467 15.1944609,16.7778824 Z"
-                    id="Triangle" fill="#CD3A29" transform="translate(10.949435, 11.398277) rotate(57.000000) translate(-10.949435, -11.398277) "></path>
-                </g>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>neoretro motorbike equipment project page</title>
+  <link href="img/favicon.ico" rel="shortcut icon">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+
+<body>
+  <header>
+    <div>
+      <svg width="63px" height="63px" viewBox="0 0 63 63" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <title>Group 3 Copy</title>
+        <g id="Symbols" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+          <g id="Mobile-Copy-2" transform="translate(-35.000000, -208.000000)">
+            <g id="Group-3-Copy" transform="translate(35.000000, 208.000000)">
+              <g id="Group">
+                <circle id="Oval-Copy-2" fill="#FF5400" cx="38" cy="31.32" r="8.4"></circle>
+                <path
+                  d="M16,6.84692827 L16,60.8 C16,61.6836556 16.7163444,62.4 17.6,62.4 L60.8,62.4 C61.6836556,62.4 62.4,61.6836556 62.4,60.8 L62.4,52.3105577 C62.4,51.4269021 61.6836556,50.7105577 60.8,50.7105577 L30.5575464,50.7105577 C29.6738908,50.7105577 28.9575464,49.9942133 28.9575464,49.1105577 L28.9575464,2.47106248 C28.9575464,1.58740688 28.241202,0.871062475 27.3575464,0.871062475 C27.1318717,0.871062475 26.9087497,0.918802638 26.7028336,1.01114772 L16.9452871,5.38701352 C16.3701172,5.64495402 16,6.21656824 16,6.84692827 Z"
+                  id="Path-2-Copy-16" fill="#363430" fill-rule="nonzero" transform="translate(39.200000, 31.200000) scale(-1, -1) translate(-39.200000, -31.200000) "></path>
+                <path
+                  d="M0,6.84692827 L0,60.8 C-3.81600257e-15,61.6836556 0.7163444,62.4 1.6,62.4 L44.8,62.4 C45.6836556,62.4 46.4,61.6836556 46.4,60.8 L46.4,52.3105577 C46.4,51.4269021 45.6836556,50.7105577 44.8,50.7105577 L14.5575464,50.7105577 C13.6738908,50.7105577 12.9575464,49.9942133 12.9575464,49.1105577 L12.9575464,2.47106248 C12.9575464,1.58740688 12.241202,0.871062475 11.3575464,0.871062475 C11.1318717,0.871062475 10.9087497,0.918802638 10.7028336,1.01114772 L0.945287149,5.38701352 C0.370117211,5.64495402 -8.01222134e-16,6.21656824 0,6.84692827 Z"
+                  id="Path-2-Copy-17" fill="#363430" fill-rule="nonzero"></path>
+              </g>
+              <g id="Group-2" transform="translate(28.000000, 19.000000)">
+                <circle id="Oval" fill="#FF5400" cx="10" cy="12" r="9"></circle>
+                <path
+                  d="M15.1944609,16.7778824 C13.9959455,17.2638181 15.6956553,18.8485217 16.5499145,18.5049012 C17.8098686,17.9980923 23.151915,7.68578086 12.1114078,4.49064652 C6.48258837,2.86166029 2.50557363,9.76328731 2.9892247,11.0835694 C3.26380146,11.8331155 5.22263426,3.36846911 12.2022505,6.63247299 C19.1818668,9.89647686 16.3929762,16.2919467 15.1944609,16.7778824 Z"
+                  id="Triangle" fill="#CD3A29" transform="translate(10.949435, 11.398277) rotate(57.000000) translate(-10.949435, -11.398277) "></path>
               </g>
             </g>
           </g>
-        </svg>
-        <nav>
-          <ul>
-            <li><a href="index.html">Work</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-<main>
-<div>
-  <div>
-    <h1>NEORETRO</h1>
-    <picture>
-      <source srcset="img/NEORETRO_HERO.jpg" media="(max-width:767px)">
-      <img src="img/NEORETRO_HERO@2x.jpg" alt="NEORETRO">
-    </picture>
-    <p>This piece is a responsive web app I designed for a course project where the brief was to create an online store. I created an e-commerce concept offering quality motorcycle goods with free shipping and returns worldwide.
-I built this project from start to finish as the UI/UX designer. I started by creating the company name, branding and logo designs. Based on the project brief, I created user personas and user flows to begin to map out the user’s experience. Low fidelity wire framing lead to digitized mid fidelity designs which were tested by users. This entire process helped to create an intuitive and beautiful user interface in the final design.</p>
-    <h2>My Process</h2>
-    <picture>
-      <source srcset="img/User First.jpg" media="(max-width:767px)">
-      <img src="img/User First@2x.jpg" alt="User First">
-    </picture>
-    <h3>User First</h3>
-    <p>Using the stories provided by the project brief, the users were conceptualized and their goals were laid out.</p>
-<picture>
-    <source srcset="img/Ideation.jpg" media="(max-width:767px)">
-    <img src="img/Ideation@2x.jpg" alt="Wireframes">
-  </picture>
-  <h3>Ideation</h3>
-  <p>I drew inspiration from several other e-commerce sites that have clean designs: most notably Prana, Nordstrom and P&Co. These sites helped shape my user interface and the wireframe designs.</p>
-  <picture>
-      <source srcset="img/Visual Design.jpg" media="(max-width:767px)">
-      <img src="img/Visual Design@2x.jpg" alt="Visual Elements">
-    </picture>
-    <h3>Visual Design</h3>
-    <p>I wanted the logo design to be elegant but also coincide with the modern classic styling of the products being sold. I decided to combine a modern typeface with a retro inspired typeface and let that drive the branding. I also created a secondary logo design that is more condensed so it can be used when space is limited and the full logo could be compromised. The UI elements were designed to communicate quality and elegance and the color palette to do the same with muted, vintage inspired colors.</p>
-    <picture>
-        <source srcset="img/Mockups.jpg" media="(max-width:767px)">
-        <img src="img/Mockups@2x.jpg" alt="Mockups">
-      </picture>
-      <h3>Mockups</h3>
-      <p>I then took the finished designs and created mockups to showcase the beautiful, responsive user interface.</p>
-      </div>
-      </div>
-  </main>
-    <footer id="contact">
+        </g>
+      </svg>
+      <nav>
+        <a href="index.html" class="nav">Work</a>
+        <a href="about.html" class="nav">About</a>
+        <a href="#contact" class="nav">Contact</a>
+      </nav>
+    </div>
+  </header>
+  <main>
+    <div>
       <div>
-        <h2>Let's Chat!</h2>
-        <p>
-          I’d love to chat about inclusive design and the value I can add to your team. <br>Skype me at <a href="skype:Logan Finney">Logan Finney</a></br>
-        </p>
-        <div>
-          <a href="mailto:loganmfinney@gmail.com">Email me</a>
-        </div>
-        <div>
-          <ul>
-          <li><a href="http://linkedin.com/in/logan-finney" target="_blank">
+        <h1>NEORETRO</h1>
+        <picture>
+          <source srcset="img/NEORETRO_HERO.jpg" media="(max-width:767px)">
+          <img src="img/NEORETRO_HERO@2x.jpg" alt="NEORETRO">
+        </picture>
+        <p>This piece is a responsive web app I designed for a course project where the brief was to create an online store. I created an e-commerce concept offering quality motorcycle goods with free shipping and returns worldwide.
+          I built this project from start to finish as the UI/UX designer. I started by creating the company name, branding and logo designs. Based on the project brief, I created user personas and user flows to begin to map out the user’s
+          experience. Low fidelity wire framing lead to digitized mid fidelity designs which were tested by users. This entire process helped to create an intuitive and beautiful user interface in the final design.</p>
+        <h2>My Process</h2>
+        <picture>
+          <source srcset="img/User First.jpg" media="(max-width:767px)">
+          <img src="img/User First@2x.jpg" alt="User First">
+        </picture>
+        <h3>User First</h3>
+        <p>Using the stories provided by the project brief, the users were conceptualized and their goals were laid out.</p>
+        <picture>
+          <source srcset="img/Ideation.jpg" media="(max-width:767px)">
+          <img src="img/Ideation@2x.jpg" alt="Wireframes">
+        </picture>
+        <h3>Ideation</h3>
+        <p>I drew inspiration from several other e-commerce sites that have clean designs: most notably Prana, Nordstrom and P&Co. These sites helped shape my user interface and the wireframe designs.</p>
+        <picture>
+          <source srcset="img/Visual Design.jpg" media="(max-width:767px)">
+          <img src="img/Visual Design@2x.jpg" alt="Visual Elements">
+        </picture>
+        <h3>Visual Design</h3>
+        <p>I wanted the logo design to be elegant but also coincide with the modern classic styling of the products being sold. I decided to combine a modern typeface with a retro inspired typeface and let that drive the branding. I also created a
+          secondary logo design that is more condensed so it can be used when space is limited and the full logo could be compromised. The UI elements were designed to communicate quality and elegance and the color palette to do the same with muted,
+          vintage inspired colors.</p>
+        <picture>
+          <source srcset="img/Mockups.jpg" media="(max-width:767px)">
+          <img src="img/Mockups@2x.jpg" alt="Mockups">
+        </picture>
+        <h3>Mockups</h3>
+        <p>I then took the finished designs and created mockups to showcase the beautiful, responsive user interface.</p>
+      </div>
+    </div>
+  </main>
+  <footer id="contact">
+    <div>
+      <h2>Let's Chat!</h2>
+      <p>
+        I’d love to chat about inclusive design and the value I can add to your team. <br>Skype me at <a href="skype:Logan Finney">Logan Finney</a></br>
+      </p>
+      <div>
+        <a href="mailto:loganmfinney@gmail.com" class="button contact">Send an Email</a>
+      </div>
+      <div>
+        <ul>
+          <li><a href="http://linkedin.com/in/logan-finney" target="_blank"></a>
             <svg data-name="Layer 1" id="Layer_1" viewBox="0 0 128 128" xmlns="http://www.w3.org/2000/svg">
               <defs>
                 <style>
@@ -108,10 +114,10 @@ I built this project from start to finish as the UI/UX designer. I started by cr
             </svg>
           </li>
         </ul>
-          </a>
-        </div>
-        <p>Copyright Logan Finney 2021</p>
       </div>
-    </footer>
-  </body>
+      <p>Copyright Logan Finney 2021</p>
+    </div>
+  </footer>
+</body>
+
 </html>
