--- a/index.html
+++ b/index.html
@@ -12,52 +12,48 @@
 
 <body>
   <header>
-    <div>
-      <svg width="63px" height="63px" viewBox="0 0 63 63" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-        <title>Group 3 Copy</title>
-        <g id="Symbols" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-          <g id="Mobile-Copy-2" transform="translate(-35.000000, -208.000000)">
-            <g id="Group-3-Copy" transform="translate(35.000000, 208.000000)">
-              <g id="Group">
-                <circle id="Oval-Copy-2" fill="#FF5400" cx="38" cy="31.32" r="8.4"></circle>
-                <path
-                  d="M16,6.84692827 L16,60.8 C16,61.6836556 16.7163444,62.4 17.6,62.4 L60.8,62.4 C61.6836556,62.4 62.4,61.6836556 62.4,60.8 L62.4,52.3105577 C62.4,51.4269021 61.6836556,50.7105577 60.8,50.7105577 L30.5575464,50.7105577 C29.6738908,50.7105577 28.9575464,49.9942133 28.9575464,49.1105577 L28.9575464,2.47106248 C28.9575464,1.58740688 28.241202,0.871062475 27.3575464,0.871062475 C27.1318717,0.871062475 26.9087497,0.918802638 26.7028336,1.01114772 L16.9452871,5.38701352 C16.3701172,5.64495402 16,6.21656824 16,6.84692827 Z"
-                  id="Path-2-Copy-16" fill="#363430" fill-rule="nonzero" transform="translate(39.200000, 31.200000) scale(-1, -1) translate(-39.200000, -31.200000) "></path>
-                <path
-                  d="M0,6.84692827 L0,60.8 C-3.81600257e-15,61.6836556 0.7163444,62.4 1.6,62.4 L44.8,62.4 C45.6836556,62.4 46.4,61.6836556 46.4,60.8 L46.4,52.3105577 C46.4,51.4269021 45.6836556,50.7105577 44.8,50.7105577 L14.5575464,50.7105577 C13.6738908,50.7105577 12.9575464,49.9942133 12.9575464,49.1105577 L12.9575464,2.47106248 C12.9575464,1.58740688 12.241202,0.871062475 11.3575464,0.871062475 C11.1318717,0.871062475 10.9087497,0.918802638 10.7028336,1.01114772 L0.945287149,5.38701352 C0.370117211,5.64495402 -8.01222134e-16,6.21656824 0,6.84692827 Z"
-                  id="Path-2-Copy-17" fill="#363430" fill-rule="nonzero"></path>
+    <div class="container">
+<div class="logo">
+      <svg width="150px" height="150px" viewBox="0 0 553 553" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+          <title>Group 3 Copy</title>
+          <g id="Symbols" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+              <g id="Artboard-Copy-3" transform="translate(-224.000000, -224.000000)">
+                  <g id="Group-3-Copy" transform="translate(224.000000, 224.000000)">
+                      <g id="Group">
+                          <circle id="Oval-Copy-2" fill="#FF5400" cx="336.571429" cy="277.405714" r="74.4"></circle>
+                          <path d="M141.714286,60.6442218 L141.714286,538.514286 C141.714286,546.34095 148.05905,552.685714 155.885714,552.685714 L538.514286,552.685714 C546.34095,552.685714 552.685714,546.34095 552.685714,538.514286 L552.685714,463.322082 C552.685714,455.495418 546.34095,449.150654 538.514286,449.150654 L270.652554,449.150654 C262.82589,449.150654 256.481125,442.805889 256.481125,434.979225 L256.481125,21.8865534 C256.481125,14.0598895 250.136361,7.71512478 242.309697,7.71512478 C240.310864,7.71512478 238.33464,8.13796622 236.510812,8.95587983 L150.086829,47.7135483 C144.992467,49.9981642 141.714286,55.061033 141.714286,60.6442218 Z" id="Path-2-Copy-16" fill="#FFFDF7" fill-rule="nonzero" transform="translate(347.200000, 276.342857) scale(-1, -1) translate(-347.200000, -276.342857) "></path>
+                          <path d="M0,60.6442218 L0,538.514286 C4.51120357e-15,546.34095 6.34476469,552.685714 14.1714286,552.685714 L396.8,552.685714 C404.626664,552.685714 410.971429,546.34095 410.971429,538.514286 L410.971429,463.322082 C410.971429,455.495418 404.626664,449.150654 396.8,449.150654 L128.938268,449.150654 C121.111604,449.150654 114.76684,442.805889 114.76684,434.979225 L114.76684,21.8865534 C114.76684,14.0598895 108.422075,7.71512478 100.595411,7.71512478 C98.5965778,7.71512478 96.6203546,8.13796622 94.7965258,8.95587983 L8.37254332,47.7135483 C3.27818102,49.9981642 -8.49224785e-15,55.061033 0,60.6442218 Z" id="Path-2-Copy-17" fill="#FFFDF7" fill-rule="nonzero"></path>
+                      </g>
+                      <g id="Group-2" transform="translate(253.000000, 175.285714)">
+                          <circle id="Oval" fill="#FF5400" cx="83.5714286" cy="99.2857143" r="79.7142857"></circle>
+                          <path d="M129.579511,141.604101 C118.964089,145.908103 134.018661,159.944049 141.584957,156.900553 C152.744551,152.411675 200.059819,61.0740591 102.272469,32.7742978 C52.4172113,18.346134 17.1922236,79.4748305 21.4759902,91.1687577 C23.9079557,97.8075946 41.2576178,22.8350121 103.077076,51.7447607 C164.896534,80.6545093 140.194932,137.3001 129.579511,141.604101 Z" id="Triangle" fill="#CD3A29" transform="translate(91.980711, 93.956163) rotate(57.000000) translate(-91.980711, -93.956163) "></path>
+                      </g>
+                  </g>
               </g>
-              <g id="Group-2" transform="translate(28.000000, 19.000000)">
-                <circle id="Oval" fill="#FF5400" cx="10" cy="12" r="9"></circle>
-                <path
-                  d="M15.1944609,16.7778824 C13.9959455,17.2638181 15.6956553,18.8485217 16.5499145,18.5049012 C17.8098686,17.9980923 23.151915,7.68578086 12.1114078,4.49064652 C6.48258837,2.86166029 2.50557363,9.76328731 2.9892247,11.0835694 C3.26380146,11.8331155 5.22263426,3.36846911 12.2022505,6.63247299 C19.1818668,9.89647686 16.3929762,16.2919467 15.1944609,16.7778824 Z"
-                  id="Triangle" fill="#CD3A29" transform="translate(10.949435, 11.398277) rotate(57.000000) translate(-10.949435, -11.398277) "></path>
-              </g>
-            </g>
           </g>
-        </g>
       </svg>
       <nav>
-
-        <a href="index.html" class="nav">Work</a>
-        <a href="about.html" class="nav">About</a>
-        <a href="#contact" class="nav">Contact</a>
-
+<ul>
+        <li><a href="index.html">Work</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+</ul>
       </nav>
     </div>
+</div>
   </header>
   <main>
-    <div>
-      <div>
+    <div id="hero">
+      <div class="container">
         <h1>Hello, my name is Logan Finney</h1>
         <h2>I'm a UI/UX designer<br>based in beautiful Bend, Oregon</br></h2>
         <p>I am passionate about creating beautiful, user-centric design solutions</p>
       </div>
     </div>
-    <div>
-      <div>
+    <div id="work">
+      <div class="container">
         <h2>My Work</h2>
-        <div>
+        <div class="row">
           <div>
             <div>
               <picture>
@@ -66,7 +62,7 @@
               </picture>
               <h3>NEORETRO</h3>
               <p>A responsive e-commerce site concept offering quality motorcycle goods worldwide.</p>
-              <a href="neoretro.html" class="button">View Project</a>
+              <a href="neoretro.html" class="button view">View Project</a>
             </div>
           </div>
         </div>
@@ -74,7 +70,7 @@
     </div>
   </main>
   <footer id="contact">
-    <div>
+    <div class="container">
       <h2>Let's Chat!</h2>
       <p>
         I’d love to chat about inclusive design and the value I can add to your team. <br>Skype me at <a href="skype:Logan Finney">Logan Finney</a></br>
@@ -82,25 +78,24 @@
       <div>
         <a href="mailto:loganmfinney@gmail.com" class="button contact">Send an Email</a>
       </div>
-      <div>
+      <div id="linkedin">
         <ul>
-          <li><a href="http://linkedin.com/in/logan-finney" target="_blank"></a>
+          <a href="http://linkedin.com/in/logan-finney" target="_blank"></a>
             <svg data-name="Layer 1" id="Layer_1" viewBox="0 0 128 128" xmlns="http://www.w3.org/2000/svg">
               <defs>
                 <style>
                   .cls-1 {
-                    fill: #062b31;
+                    fill: #fffdf7;
                   }
                 </style>
               </defs>
-              <title />
               <path class="cls-1"
                 d="M106.09,20.5a1.41,1.41,0,0,1,1.41,1.41v84.19a1.41,1.41,0,0,1-1.41,1.41H21.91a1.41,1.41,0,0,1-1.41-1.41V21.91a1.41,1.41,0,0,1,1.41-1.41h84.19m0-6.5H21.91A7.91,7.91,0,0,0,14,21.91v84.19A7.91,7.91,0,0,0,21.91,114h84.19a7.91,7.91,0,0,0,7.91-7.91V21.91A7.91,7.91,0,0,0,106.09,14Z" />
               <rect class="cls-1" height="41.73" width="11.73" x="37.27" y="50.4" />
               <path class="cls-1" d="M77.23,50.4C67.18,50.4,67,56.21,67,56.61V50.4H55V92.13H67V68.31c0-1.86.55-5.86,6.23-5.86s5.63,5.73,5.63,5.73v24H90.73v-26C90.73,53.85,84,50.4,77.23,50.4Z" />
               <circle class="cls-1" cx="43.13" cy="41.73" r="5.86" />
             </svg>
-          </li>
+          
         </ul>
         </a>
       </div>
