--- a/neoretro.html
+++ b/neoretro.html
@@ -12,8 +12,9 @@
 
 <body>
   <header>
-    <div>
-      <svg width="553px" height="553px" viewBox="0 0 553 553" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <div class="container">
+<div class="logo">
+      <svg width="150px" height="150px" viewBox="0 0 553 553" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <title>Group 3 Copy</title>
           <g id="Symbols" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
               <g id="Artboard-Copy-3" transform="translate(-224.000000, -224.000000)">
@@ -32,11 +33,14 @@
           </g>
       </svg>
       <nav>
-        <a href="index.html" class="nav">Work</a>
-        <a href="about.html" class="nav">About</a>
-        <a href="#contact" class="nav">Contact</a>
+<ul>
+        <li><a href="index.html">Work</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+</ul>
       </nav>
     </div>
+</div>
   </header>
   <main>
     <div>
@@ -80,7 +84,7 @@
     </div>
   </main>
   <footer id="contact">
-    <div>
+    <div class="container">
       <h2>Let's Chat!</h2>
       <p>
         I’d love to chat about inclusive design and the value I can add to your team. <br>Skype me at <a href="skype:Logan Finney">Logan Finney</a></br>
@@ -88,26 +92,26 @@
       <div>
         <a href="mailto:loganmfinney@gmail.com" class="button contact">Send an Email</a>
       </div>
-      <div>
+      <div id="linkedin">
         <ul>
-          <li><a href="http://linkedin.com/in/logan-finney" target="_blank"></a>
+          <a href="http://linkedin.com/in/logan-finney" target="_blank"></a>
             <svg data-name="Layer 1" id="Layer_1" viewBox="0 0 128 128" xmlns="http://www.w3.org/2000/svg">
               <defs>
                 <style>
                   .cls-1 {
-                    fill: #062b31;
+                    fill: #fffdf7;
                   }
                 </style>
               </defs>
-              <title />
               <path class="cls-1"
                 d="M106.09,20.5a1.41,1.41,0,0,1,1.41,1.41v84.19a1.41,1.41,0,0,1-1.41,1.41H21.91a1.41,1.41,0,0,1-1.41-1.41V21.91a1.41,1.41,0,0,1,1.41-1.41h84.19m0-6.5H21.91A7.91,7.91,0,0,0,14,21.91v84.19A7.91,7.91,0,0,0,21.91,114h84.19a7.91,7.91,0,0,0,7.91-7.91V21.91A7.91,7.91,0,0,0,106.09,14Z" />
               <rect class="cls-1" height="41.73" width="11.73" x="37.27" y="50.4" />
               <path class="cls-1" d="M77.23,50.4C67.18,50.4,67,56.21,67,56.61V50.4H55V92.13H67V68.31c0-1.86.55-5.86,6.23-5.86s5.63,5.73,5.63,5.73v24H90.73v-26C90.73,53.85,84,50.4,77.23,50.4Z" />
               <circle class="cls-1" cx="43.13" cy="41.73" r="5.86" />
             </svg>
-          </li>
+
         </ul>
+        </a>
       </div>
       <p>Copyright Logan Finney 2021</p>
     </div>
